# rust-game

./: Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  webpack.config.js
.github/workflows/: build.yml
js/: index.js
src/: browser.rs  engine.rs  game.rs  gane.rs  lib.rs  segments.rs  sound.rs
static/: credits.txt  index.html  styles.css
tests/: app.rs
wiki/: top.md
