# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = {version = "0.2.92", features=[]}
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
futures = "0.3.30"
wasm-bindgen-futures = "0.4.42"
serde = {version = "1.0.203", features=["derive"]}
gloo-utils = {version="0.2.0", features=["serde"]}
# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.69"
features = ["console","Window","Document","HtmlCanvasElement","CanvasRenderingContext2d","Element","HtmlImageElement","Response"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.42"

js-sys = "0.3.69"

